Remove base::ThreadChecker usage from the audio thread.

There's no gaurantee on what thread OnData() is called from and the
way the thread checker is used ends up only checking OnData() instead
of OnData() and OnSetFormat() since it always detaches in OnSetFormat.

BUG=823403
TEST=none

Change-Id: I5665ca4a2b5ffa8472404102d88dcf37604d83d2
Reviewed-on: https://chromium-review.googlesource.com/1022472
Reviewed-by: Henrik Grunell <grunell@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553002}
Former-commit-id: e89ee8fdd0ae9ef05de23cda4b7d09d49daf9516